2006-12-10  Douglas Bates  <bates@stat.wisc.edu>

	* DESCRIPTION (Version, Date): 3.1-78

2006-12-06  Douglas Bates  <bates@stat.wisc.edu>

	* R/nlme.R (contrMat): Ensure that the constrasts component is a
	list of matrices by expanding function names if necessary.

2006-11-29  Douglas Bates  <bates@stat.wisc.edu>

	* DESCRIPTION: Prepare for new version.
	* R/newMethods.R (getData.nls): getData.nls for R's nls objects
	* inst/scripts/ch*.R: update Pinheiro and Bates (2000) scripts

2006-11-29  Brian Ripley <Brian.Ripley@R-project.org>

	* R/reStruct.R: fix PR#9262, multiple-line deparse.
	* R/gls.R, groupedData.R, lme.R, lmList.R, newMethods,R, nlme.R:
	more deparse width issues.

2006-09-28  Douglas Bates  <bates@stat.wisc.edu>

	* R/nlme.R (getParsNlme): backed out change that caused failure
	reported by Christian Ritz.

2006-09-18  Douglas Bates  <bates@stat.wisc.edu>

	* R/VarCorr.R (VarCorr): Clean up problems in this file and
	several others detected by codetools.

2006-09-11  Douglas Bates  <bates@R-project.org>

	* R/nlme.R (getParsNlme): '[[' not '[' in case start$fixed is a list
	* R/gls.R,gnls.R,newMethods.R,nlme.R,pdMat,Rsimulate.R: fix
	problems exposed by codetools.

2006-07-31  Douglas Bates  <Douglas.Bates@R-project.org>

	* man/ranef.lme.Rd: Modified the description of the `standard'
	argument to more clearly describe its effect.

2006-07-24  Douglas Bates  <Douglas.Bates@R-project.org>

	* R/lme.R: Patch by Andrew Robinson <A.Robinson@ms.unimelb.edu.au>
	and Berwin Turlach <berwin@maths.uwa.edu.au> to set maximum number
	of function calls in nlminb.

2006-07-03  Douglas Bates  <Douglas.Bates@R-project.org>

	* DESCRIPTION: Version is 3.1-75

	* man/{many files}: Documentation changes contributed by Spencer
	Graves <spencer.graves@pdf.com>.  Most of the changes add Pinheiro
	and Bates (2000) as a reference or add additional \seealso{}
	entries.  Some examples from Pinheiro and Bates (2000) have also
	been added.
